Fixed the navbar alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,25 +43,17 @@ body {
   /* background-repeat: no-repeat; */
   /* width: 100%; */
 }
-/* Group 2/Variant2 */
-#content {
-  /* margin: 2%; */
-  /* padding: 2%; */
-}
-#collapsibleNavbar {
-  /* display: flex; */
-  /* align-items: center; */
-}
+
 .navbar {
   /* border: 3px solid; */
   padding: 1%;
+  /* margin-top: -1%; */
   background-color: rgb(255, 255, 255, .5); 
+  color: black;
   /* display: flex;
   align-items: center; */
 }
-.navbar {
-  color: black;
-}
+
 #bigContent {
   /* background-color: cadetblue; */
   border-radius: 50px;
@@ -73,11 +65,10 @@ body {
   color: black;
   background-color: rgba(255, 255, 255, 0.8); 
 }
-#navBar {
-  /* text-align: right; */
-}
-header h2 {
-  /* float: left; */
+
+h2 {
+  float: left;
+  margin-top: -0.2%;
 }
 
 #footerTest {
@@ -158,11 +149,8 @@ input[type=text] {
 h1 {
   margin-top: 1em;
   text-align: center;
-<<<<<<< HEAD
-=======
 }
 
 .nav-link {
   float: right;
->>>>>>> c353339c3ed822f888885144690066259b3fa33a
 }
